@@ -96,6 +96,7 @@ LDFLAGS="$TBE_LDFLAGS $LDFLAGS"
 AC_DEFINE_UNQUOTED(TBE_VERSION,"$PACKAGE_VERSION")
 AC_SUBST(VERSION,"$PACKAGE_VERSION")
 AC_SUBST(DISTDIR,"\$(TOPSRCDIR)/dist")
+AC_SUBST(LIBDIR,"\$(TOPSRCDIR)/lib")
 
 AC_CONFIG_FILES(  \
   Makefile        \
